# online-store

./: .env_sample  .gitignore  category.json  groups.json  products.json  pyproject.toml
articles/: admin.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_alter_article_photo.py
articles/templates/articles/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version.py  0003_product_owner.py  0004_alter_product_options_product_is_published.py
catalog/templates/: base.html  contacts.html  create_product.html  home.html  products_details.html  products_list.html
catalog/templates/catalog/: base.html  contacts.html  create_product.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: new_password.html  user_form.html  user_profile.html
