[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
black = "^24.8.0"
pillow = "^10.4.0"
ipython = "^8.26.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
phonenumbers = "^8.13.45"
django = "4.2.2"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
